--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,32 @@
-# Object file
-*.o
+# Mac system file
+.DS_Store
 
-# Ada Library Information
-*.ali
+# History files
+.Rhistory
+.Rapp.history
+
+# Session Data files
+.RData
+
+# Example code in package build process
+*-Ex.R
+
+# Output files from R CMD build
+/*.tar.gz
+
+# Output files from R CMD check
+/*.Rcheck/
+
+# RStudio files
+.Rproj.user/
+
+# produced vignettes
+vignettes/*.html
+vignettes/*.pdf
+
+# OAuth2 token, see https://github.com/hadley/httr/releases/tag/v0.3
+.httr-oauth
+
+
+# Rfile for API Key
+apiKey.R
